--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Victor Chavez <chavez-bermudez@fh-aachen.de>
 sentence=Simple J1939 CAN library.
 paragraph=A simplified J1939 communication library without full stack support.
 category=Communication
-url=https://github.com//SimpleJ1939
+url=https://github.com/vChavezB/SimpleJ1939
 architectures=*
 includes=SimpleJ1939.hpp
